--- a/requirements.txt
+++ b/requirements.txt
@@ -83,6 +83,7 @@ testpath==0.4.4
 threadpoolctl==2.1.0
 toolz==0.11.1
 tornado==6.1
+tqdm==4.59.0
 traitlets==5.0.5
 typing-extensions==3.7.4.3
 urllib3==1.26.3
