--- a/requirements.txt
+++ b/requirements.txt
@@ -22,8 +22,10 @@ fsspec==0.8.5
 HeapDict==1.0.1
 idna==2.10
 ipykernel==5.4.3
+ipympl==0.7.0
 ipython==7.20.0
 ipython-genutils==0.2.0
+ipywidgets==7.6.3
 jdcal==1.4.1
 jedi==0.18.0
 Jinja2==2.11.3
@@ -36,6 +38,7 @@ jupyter-server==1.3.0
 jupyterlab==3.0.7
 jupyterlab-pygments==0.1.2
 jupyterlab-server==2.2.1
+jupyterlab-widgets==1.0.0
 kiwisolver==1.3.1
 locket==0.2.1
 MarkupSafe==1.1.1
@@ -47,6 +50,7 @@ nbclient==0.5.2
 nbconvert==6.0.7
 nbformat==5.1.2
 nest-asyncio==1.5.1
+nodeenv==1.5.0
 notebook==6.2.0
 numpy==1.20.1
 openpyxl==3.0.6
@@ -89,5 +93,6 @@ typing-extensions==3.7.4.3
 urllib3==1.26.3
 wcwidth==0.2.5
 webencodings==0.5.1
+widgetsnbextension==3.5.1
 xlrd==2.0.1
 zict==2.0.0
