--- a/requirements.txt
+++ b/requirements.txt
@@ -77,6 +77,7 @@ pyzmq==22.0.3
 requests==2.25.1
 scikit-learn==0.24.1
 scipy==1.6.0
+seaborn==0.11.1
 Send2Trash==1.5.0
 six==1.15.0
 sniffio==1.2.0
