--- a/requirements.txt
+++ b/requirements.txt
@@ -1,100 +1,98 @@
-anyio==2.1.0
-argon2-cffi==20.1.0
-async-generator==1.10
-attrs==20.3.0
-Babel==2.9.0
-backcall==0.2.0
-bleach==3.3.0
-bokeh==2.2.3
-certifi==2020.12.5
-cffi==1.14.5
-chardet==4.0.0
-click==7.1.2
-cloudpickle==1.6.0
-cycler==0.10.0
-dask==2021.2.0
+appdirs==1.4.4
+apturl==0.5.2
+autopep8==1.5.4
+blinker==1.4
+Brlapi==0.7.0
+cachetools==4.1.1
+certifi==2019.11.28
+chardet==3.0.4
+chrome-gnome-shell==0.0.0
+Click==7.0
+colorama==0.4.3
+command-not-found==0.3
+cryptography==2.8
+cupshelpers==1.0
+dbus-python==1.2.16
 decorator==4.4.2
-defusedxml==0.6.0
-distributed==2021.2.0
+defer==1.0.6
+distlib==0.3.1
+distro==1.4.0
+distro-info===0.23ubuntu1
+dnspython==1.16.0
 entrypoints==0.3
-et-xmlfile==1.0.1
-fsspec==0.8.5
-HeapDict==1.0.1
-idna==2.10
-ipykernel==5.4.3
-ipympl==0.7.0
-ipython==7.20.0
-ipython-genutils==0.2.0
-ipywidgets==7.6.3
-jdcal==1.4.1
-jedi==0.18.0
-Jinja2==2.11.3
-joblib==1.0.1
-json5==0.9.5
-jsonschema==3.2.0
-jupyter-client==6.1.11
-jupyter-core==4.7.1
-jupyter-server==1.3.0
-jupyterlab==3.0.7
-jupyterlab-pygments==0.1.2
-jupyterlab-server==2.2.1
-jupyterlab-widgets==1.0.0
-kiwisolver==1.3.1
-locket==0.2.1
-MarkupSafe==1.1.1
-matplotlib==3.3.4
-mistune==0.8.4
-msgpack==1.0.2
-nbclassic==0.2.6
-nbclient==0.5.2
-nbconvert==6.0.7
-nbformat==5.1.2
-nest-asyncio==1.5.1
-nodeenv==1.5.0
-notebook==6.2.0
-numpy==1.20.1
-openpyxl==3.0.6
-packaging==20.9
-pandas==1.2.2
-pandocfilters==1.4.3
-parso==0.8.1
-partd==1.1.0
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==8.1.0
-prometheus-client==0.9.0
-prompt-toolkit==3.0.16
-psutil==5.8.0
-ptyprocess==0.7.0
-pycparser==2.20
-Pygments==2.8.0
-pyparsing==2.4.7
-pyrsistent==0.17.3
-python-dateutil==2.8.1
-pytz==2021.1
-PyYAML==5.4.1
-pyzmq==22.0.3
-requests==2.25.1
-scikit-learn==0.24.1
-scipy==1.6.0
-seaborn==0.11.1
-Send2Trash==1.5.0
-six==1.15.0
-sniffio==1.2.0
-sortedcontainers==2.3.0
-tblib==1.7.0
-terminado==0.9.2
-testpath==0.4.4
-threadpoolctl==2.1.0
-toolz==0.11.1
-tornado==6.1
-tqdm==4.59.0
-traitlets==5.0.5
-typing-extensions==3.7.4.3
-urllib3==1.26.3
-wcwidth==0.2.5
-webencodings==0.5.1
-widgetsnbextension==3.5.1
-xgboost==1.4.0
-xlrd==2.0.1
-zict==2.0.0
+filelock==3.0.12
+google-api-core==1.23.0
+google-api-python-client==1.12.8
+google-auth==1.23.0
+google-auth-httplib2==0.0.4
+google-auth-oauthlib==0.4.2
+googleapis-common-protos==1.52.0
+gpg===1.13.1-unknown
+httplib2==0.18.1
+idna==2.8
+ifaddr==0.1.6
+keyring==18.0.1
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+louis==3.12.0
+macaroonbakery==1.3.1
+Markdown==3.1.1
+netifaces==0.10.4
+nose==1.3.7
+numpy==1.17.4
+numpy-stl==2.8.0
+oauthlib==3.1.0
+olefile==0.46
+opencv-python==4.4.0.46
+packaging==20.3
+Pillow==7.0.0
+protobuf==3.14.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycairo==1.16.2
+pycodestyle==2.6.0
+pycrypto==2.6.1
+pycups==1.9.73
+Pygments==2.3.1
+PyGObject==3.36.0
+PyJWT==1.7.1
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+pyparsing==2.4.6
+PyQt5==5.14.1
+pyRFC3339==1.1
+pyserial==3.4
+python-apt==2.0.0+ubuntu0.20.4.4
+python-dateutil==2.7.3
+python-debian===0.1.36ubuntu1
+python-utils==2.2.0
+pytz==2019.3
+pyxdg==0.26
+PyYAML==5.3.1
+requests==2.22.0
+requests-oauthlib==1.3.0
+requests-unixsocket==0.2.0
+rsa==4.6
+scipy==1.3.3
+screen-resolution-extra==0.0.0
+SecretStorage==2.3.1
+Shapely==1.7.0
+simplejson==3.16.0
+sip==4.19.21
+six==1.14.0
+systemd-python==234
+TLPUI==1.4.0a0
+toml==0.10.2
+ubuntu-advantage-tools==20.3
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
+uritemplate==3.0.1
+urllib3==1.25.8
+vboxapi==1.0
+virtualenv==20.2.1
+wadllib==1.3.3
+xkit==0.0.0
+zeroconf==0.24.4
